--- a/fns.qmd
+++ b/fns.qmd
@@ -23,8 +23,13 @@ tomato_diameter
 
 ## Some Built-in Functions
 There are a lot of functions readily loaded in R to equip you for the analysis tasks you want to undertake. For tasks that R built-in function can't handle, you can install packages (covered in [Chapter @sec-pkgs]) or build your own covered in [ -@sec-cust-fns]. The various built-in functions are designed to perform specific tasks on the various data types. There are some designed to work with files and folders as well.
+For examples, we may want to know the total number of values we have in our record, that is the count. We do this with `length`.
+```{r}
+length(tomato_diameter)
+```
 
-We may be interested in finding the average of the records of tomato_diameter. To do that, we use `mean`.
+
+We may also be interested in finding the average of the records of tomato_diameter. To do that, we use `mean`.
 
 ```{r}
 mean(x = tomato_diameter)
@@ -78,7 +83,7 @@ pi
 ```
 
 
-
+### Making Graphs with the `plot()` Function
 To see a graph of the *tomato_diameter* object, we can pass it to `plot` function as the first argument `x`, which is also x-axis, and a scattered plot graph is produced as seen in @fig-td. 
 ```{r}
 #| label: fig-td
@@ -184,6 +189,7 @@ hist(dt, xlab = "diameter")
 
 : Functions for generating random numbers of data in R {#tbl-distro-funs}
 
+### Sampling with sample()
 Another important function for randomization is using `sample`. `sample` is used for selecting values at random from a set of data. Let's take the example below:
 
 ```{r}
@@ -195,22 +201,113 @@ We can randomly select five values from `new_dt` using `sample`
 set.seed(10)
 sample(new_dt, 5)
 ```
-`sample` can be used for more, as we can select with replacement, and also set the probabilities of the values to we want to select. This is perfect for weighted probability.
+
+#### Weighted Samples and Sampling with Replacement
+More than selecting values at random, with `sample` we can also select with replacement by setting the value of the argument `replace` to `TRUE`. 
 ```{r}
 sample(new_dt, 20, replace = TRUE)
 ```
-With `replace` set to `TRUE` we can select with replacement.
+
+The probabilities of the values we want to randomly select can also be determined by the `prob`. This is perfect for weighted probability. Example is a die of unequal prob.
+```{r}
+die <- 1:6
+die_prob <- c(0.23, 0.23, 0.23, 0.21, 0.07, 0.03)
+```
+
+```{r}
+set.seed(123)
+die_selected <- sample(x = die, size = 100, replace = TRUE, prob = die_prob)
+die_selected
+```
+To get the number of occurrence of each die face we can use the `table` function. and notice that values with lower probability of occuring such as 5 and 6 were sampled less.
+```{r}
+table(die_selected)
+```
+
+### String Functions
+Some functions in R, makes it easy to work with strings.
 
 ## Custom Functions {#sec-cust-fns}
+The functions that are preloaded in R are a lot, and they will likely not meet all our statistical or operational needs. For some tasks you want to do, you would need to write your own function. 
+
 ### Creating Custom Functions 
-### Using Custom function
+For example we can estimate the z-score of some the data we have created so far. The z-score tells you how many standard deviations an element is from the mean of the vector. It transforms our data into a common scale. The formula for z-score is given as:
+
+$$Z = \frac{x - \mu}{\sigma}$$
+Where:
+
+    -   $x$ is the value in the vector,
+    -   $\mu$ is the mean of the vector,
+    -   $\sigma$ is the standard deviation of the vector.
+
+Without a custom function we will do the following:
+```{r}
+average_tomato <- mean(tomato_diameter)
+sd_tomato <- sd(tomato_diameter)
+z_tomato <- (tomato_diameter - average_tomato) / sd_tomato
+
+average_tree_diameter <- mean(tree_diameter)
+sd_tree_diameter <- sd(tree_diameter)
+z_tree_diameter <- (tree_diameter - average_tree_diameter) / sd_tree_diameter
+
+average_dt <-mean(dt)
+sd_tomato <- sd(dt)
+z_dt <- (dt - average_dt) / sd_tomato
+```
+
+We got the following results
+```{r}
+z_tomato
+z_tree_diameter
+z_dt
+```
+If we look closely, we can spot an error while computing `z_dt`. The following steps can be done easily with a custom function. To create a custom function we need to solidify our understanding of functions. In R, every functions have three basic parts; a name, a body, and set of arguments. To create functions in R we call `function()` function followed by `{}`. 
+
+```{r}
+new_function <- function() {}
+```
+The name of the arguments is passed into the parenthesis of `function` and the body, or expresions are passed into the curly brackets.
+
+```{r}
+z_score <- function(x) {
+  average_x <- mean(x, na.rm = TRUE)
+  sd_x <- sd(x, na.rm = TRUE)
+  z_value = (x - average_x)/sd_x
+  return(z_value)
+}
+```
+
+Next is using the custom function. We should note that, custom functions are called in a similar way that R's built-in functions are called, the object name followed by parenthesis.
+```{r}
+z_tomato_2 <- z_score(tomato_diameter)
+z_tree_diameter_2 <- z_score(tree_diameter)
+z_dt_2 <- z_score(dt)
+z_tomato_2
+z_tree_diameter_2
+z_dt_2
+```
+Using a custom function does not only make our code more readable, it prevents errors from copying and pasting, and if we need to make a change in out formula, we need to do it in only a place--the function definition.
+
+### When to Write a Custom Functiom
+When do you need to write a function?
+
+  - When you find yourself copying, pasting and adapting blocks of code. Copying, pasting and adapting codes to new data or objects should not be more than three times.
+  - When the code is clunky and not readable, writing custom functions improves the readability of your code
+  - For individuals that regular submit report to different people, stakeholders, and groups, parametizing different inputs in your report ensure you produce multiple focused report at once.
+  - Avoiding code duplication
+
+
 ## Getting Help
-Use the `help` function to get help, `?`, and also `args` to see the arguments of functions
+Use the `help` function to get help, `?`, and also `args` to see the arguments of functions.
+
+
+
 :::{.callout-caution}
 There are more than 2300 functions loaded when an R session starts and that's a lot. Some will be remembered and some forgotten. You are not expected to remember these functions, even the people that developed these functions forget some of the function and their arguments. Remember there always resources for you
 :::
 
 ## Exercise
 1. Using `seq` create a sequence of odd numbers between 1 and 100
-
+2. Read the documentation of `mean`, `median`, `sd`, and `var`. What does the `is.na` argument does?
+3. Write
 ## Summary
