--- a/fns.qmd
+++ b/fns.qmd
@@ -4,14 +4,14 @@
 This section is under review.
 :::
 
-In previous chapters, we used functions such as `c`, `as.factors`, and `class` to mention a few. So what are functions? Functions are self contained blocks of code that accomplish a specific task. A function we can relate with camera is taking pictures, and a bicycle is transportation. In R, functions are named objects followed by parentheses. Within the parentheses of functions are contained arguments. Arguments are values passed into a function to get a result or outcomes.
+In the previous chapters, functions such as `c()`, `as.factors()`, and `class()` to mention a few were used. So what are functions? Functions are self contained blocks of code that accomplish a specific task. A function we can relate with a camera is taking pictures, and a bicycle is transportation. In R, functions are named objects followed by parentheses. Within the parentheses of functions are contained arguments. Arguments are values passed into a function to get a result or outcomes.
 
-For example to record the diameter (mm) of tomato plants, use the function `c`. This function combine values into a list or vector.
+For example to record the diameter (mm) of tomato plants, use the function `c()`. This function combine values into a list or vector.
 ```{r}
 tomato_diameter <- c(43.68, 70.23, 29.31, 83.08, 27.42, 53.50, 30.95, 10.51, 41.41, 68.06)
 ```
 
-You can print out the plants record by using the function `print`
+You can print out the plants record by using the function `print()`
 ```{r}
 print(tomato_diameter)
 ```
@@ -22,50 +22,56 @@ tomato_diameter
 ```
 
 ## Some Built-in Functions
-There are a lot of functions readily loaded in R to equip you for the analysis tasks you want to undertake. For tasks that R built-in function can't handle, you can install packages (covered in [Chapter @sec-pkgs]) or build your own covered in [ -@sec-cust-fns]. The various built-in functions are designed to perform specific tasks on the various data types. There are some designed to work with files and folders as well.
-For examples, we may want to know the total number of values we have in our record, that is the count. We do this with `length`.
+There are a lot of functions readily loaded in R to equip you for the analysis tasks you want to undertake. For tasks that R built-in function can't handle, you can install packages (covered in [Chapter @sec-pkgs]) or build your own, covered in [ -@sec-cust-fns]. The various built-in functions are designed to perform specific tasks on the various data types. There are some designed to work with files and folders as well.
+For examples, you may want to know the total number of values we have in our record, that is the count. You can do this with `length()`.
 ```{r}
 length(tomato_diameter)
 ```
 
 
-We may also be interested in finding the average of the records of tomato_diameter. To do that, we use `mean`.
+To find the average of the records of tomato_diameter use `mean()`.
 
 ```{r}
 mean(x = tomato_diameter)
 ```
-The above can also be written as `mean(tomato_diamter)`. `x` here is the argument that the function takes and in this case is our record *tomato_diameter*. To know more about any function use the function `help` or type a question mark followed by the question name. So we have `help(mean)` or `?mean`.
+The above can also be written as 
+```{r}
+#| eval: false
+`mean(tomato_diamter)`
+```
 
-We can check the median of the record using -- you guessed it right, `median`. We also `sd`, `var`, and `cor` for checking the standard deviation, variance and correlation respectively.
+. 
+`x` here is the keyword argument that the function takes and in this case is the data *tomato_diameter*. To know more about any function use the function `help()` or type a question mark followed by the question name. So we have `help(mean)` or `?mean`.
+
+To check the median of the data use -- you guessed it right, `median()`. There's also `sd()`, `var()`, and `cor()` for checking the standard deviation, variance and correlation respectively.
 ```{r}
 median(tomato_diameter)
 sd(tomato_diameter)
 var(tomato_diameter)
 cor(tomato_diameter, 1:10)
 ```
-Using functions such as `round` we can round off the values of the recorded tomatoes diameter to the nearest whole number.
+Using functions such as `round()` you can round off the values of the recorded tomatoes diameter to the nearest whole number.
 ```{r}
 round(tomato_diameter)
 ```
-We can specify the decimal place to round to, by passing a number to the argument `digits`
+To specify the decimal place to round to, pass a number, which is ideally an integer or whole number to the argument `digits`.
 ```{r}
 round(tomato_diameter, digits = 1)
 # Also the same as
 # round(tomato_diameter, 1)
 ```
 
-To round up, we use a variation of `round`, `ceiling`, and to round down, we use `floor`.
+To round up in a specific direction, either up or down, we have two variation of `round()`, `ceiling()`, to round up and `floor()` to round down.
 ```{r}
 floor(3.544)
 ceiling(3.544)
 ```
 
-
-To create a sequence of number we can use the colon (`:`) symbol  and the `seq` function. `seq` gives more control on the sequence we want to generate. Important arguments of `seq` to remember are `from`, `to`, and `by`.
+To create a sequence of number use the colon (`:`) symbol  and the `seq()` function. `seq()` gives more control on the sequence you want to generate. Important arguments of `seq` to remember are `from`, `to`, and `by`.
 ```{r}
 seq(from = 1, to = 100, by = 1)
 ```
-The above is also similar to the code below, using position of the arguments instead of writing the argument out. Writing in such a manner is common when using R
+The above is also similar to the code below, using position of the arguments instead of writing the argument out. Writing in such a manner is common in the R community.
 ```{r}
 #| eval: false
 seq(1, 100, 1)
@@ -84,13 +90,13 @@ pi
 
 
 ### Making Graphs with the `plot()` Function
-To see a graph of the *tomato_diameter* object, we can pass it to `plot` function as the first argument `x`, which is also x-axis, and a scattered plot graph is produced as seen in @fig-td. 
+To see a graph of the *tomato_diameter* object, pass it to `plot()` function as the first argument `x`. `x` stands for x-axis, and a scattered plot graph is produced as shown in @fig-td. 
 ```{r}
 #| label: fig-td
 #| fig-cap: Graph generated for tomato diameters using `plot`
 plot(x = tomato_diameter)
 ```
-The graph can be customized by passing values into other arguments within the `plot` function. Arguments such as `col` changes the color while `pch` changes the shape of each point, @fig-plot-cust. You can also use `hist` to see the distribution of the data, @fig-td-hist.
+The graph can be customized by passing values into other arguments within the `plot()` function. Arguments such as `col` changes the color while `pch` changes the shape of each point, @fig-plot-cust. You can also use `hist()` to see the distribution of the data, @fig-td-hist.
 ```{r}
 
 #| label: fig-plot-cust
@@ -118,15 +124,15 @@ hist(
 ```
 
 ### Simulating Numbers
-An important part of research is data simulation and R provides a robust set of functions for generating random numbers from different probability distributions. For example, the `runif` function generates random numbers from a uniform distribution, `rnorm` for the normal distribution, `rpois` for the Poisson distribution, and `rbinom` for the binomial distribution. These functions belong to a family that also includes functions for calculating density (**d**), distribution functions (**p**), quantiles (**q**), and random deviates (**r**) for various statistical distributions. A comprehensive list of these functions can be found in @tbl-distro-funs.
+An important part of research is data simulation and R provides a robust set of functions for generating random numbers from different probability distributions. For example, the `runif()` function generates random numbers from a uniform distribution, `rnorm()` for the normal distribution, `rpois()` for the Poisson distribution, and `rbinom()` for the binomial distribution. These functions belong to a family that also includes functions for calculating density (**d**), distribution functions (**p**), quantiles (**q**), and random deviates (**r**) for various statistical distributions. A comprehensive list of these functions can be found in @tbl-distro-funs.
 
-For example we can simulate the height of 100 *Tectona grandis* in a plantation with mean diameter of 25 cm and a deviation of 2.3 cm all of the same age. To do that we use the function `rnorm`. In forestry, the distribution of tree diameters is usually a bell-shaped curve. With some codes we will generate such curve, @fig-dia-hist-2 while the distribution of the diameters represented as a histogram can be seen in @fig-dia-hist-1.
+For example, to simulate the height of 100 *Tectona grandis* in a plantation with mean diameter of 25 cm and a deviation of 2.3 cm all of the same age use `rnorm()`. In forestry, the distribution of trees diameter in a plantation is usually a bell-shaped curve. With some codes you will generate such curve as @fig-dia-hist-2 while the distribution of the diameters represented as a histogram can be seen in @fig-dia-hist-1.
 ```{r}
 teak_diameter <- rnorm(100, mean = 35, sd = 2.3)
 teak_diameter
 ```
 
-The numbers generated will be different from that which you will get when you run a similar code because they are random numbers. The beauty of R its reproducibility. Using the function `set.seed` captures the number for others to use and replicate your work. Given that the seed number is the same whatever numbers we have can be replicated by another person.
+The numbers generated above will be different from that which you will produce and may never get the exact thing. This is because they are random numbers. The beauty of R is its reproducibility. Using `set.seed()` captures a specific number, a pseudorandom number and makes your work replicatable. Given that the seed number is the same, whatever pseudorandom numbers are produce can be replicated by another person.
 
 ```{r}
 set.seed(123)
@@ -156,7 +162,7 @@ plot(
   lty = "dashed"
 )
 ```
-`runif` is used to for generating number of a uniform distribution. A graph of the distribution is seen @fig-hist-unif. Other functions for generating random numbers 
+`runif()` is used to for generating number of a uniform distribution, @fig-hist-unif.
 ```{r}
 set.seed(123)
 dt <- runif(100, min = 10, max = 20)
@@ -174,7 +180,7 @@ hist(
 )
 ```
 
-
+Other functions for generating random numbers according to distribution are:
 |Function|Distribution|Description|
 |:--------|:------------|:-----------|
 |runif| Uniform distribution | Generates random numbers from a uniform distribution |
@@ -197,20 +203,20 @@ hist(
 : Functions for generating random numbers of data in R {#tbl-distro-funs}
 
 ### Sampling with sample()
-Another important function for randomization is using `sample`. `sample` is used for selecting values at random from a set of data. Let's take the example below:
+Another important function for randomization is using `sample()`. `sample()` is used for selecting values at random from a set of data. Let's take the example below:
 
 ```{r}
 new_dt <- seq(1, 20, 2)
 new_dt
 ```
-We can randomly select five values from `new_dt` using `sample`
+We can randomly select five values from `new_dt` using `sample()`
 ```{r}
 set.seed(10)
 sample(new_dt, 5)
 ```
 
 #### Weighted Samples and Sampling with Replacement
-More than selecting values at random, with `sample` we can also select with replacement by setting the value of the argument `replace` to `TRUE`. 
+More than selecting values at random, with `sample()` we can also select with replacement by setting the value of the argument `replace` to `TRUE`. 
 ```{r}
 sample(new_dt, 20, replace = TRUE)
 ```
@@ -226,7 +232,7 @@ set.seed(123)
 die_selected <- sample(x = die, size = 100, replace = TRUE, prob = die_prob)
 die_selected
 ```
-To get the number of occurrence of each die face we can use the `table` function. and notice that values with lower probability of occuring such as 5 and 6 were sampled less.
+To get the number of occurrence of each die face we can use the `table()` function. and notice that values with lower probability of occuring such as 5 and 6 were sampled less.
 ```{r}
 table(die_selected)
 ```
@@ -237,17 +243,17 @@ Some functions in R makes it easy to work with strings. Let's create a simple st
 tree_1 <- " Adansonia digitata "
 tree_1
 ```
-We can count the number of characters in the object using `nchar`. Know that `nchar` also includes the spaces in the text.
+We can count the number of characters in the object using `nchar()`. Know that `nchar()` also includes the spaces in the text.
 ```{r}
 nchar(tree_1)
 ```
-The data can be changed to lower cases by using `tolower`, and changed to upper cases by using `toupper`. Unfortunately, Base R does not provide a function to changed strings to title or sentence cases. You can explore [stringr](https://stringr.tidyverse.org/) by Hadley Wickham and [stringi](https://stringi.gagolewski.com/) by Marek Gagolewski for string processing in R.
+The data can be changed to lower cases by using `tolower`, and changed to upper cases by using `toupper`. Unfortunately, Base R does not provide a function to changed strings to title or sentence cases, but there are open source packages available to do this . You can explore [stringr](https://stringr.tidyverse.org/) by Hadley Wickham and [stringi](https://stringi.gagolewski.com/) by Marek Gagolewski which contains functions for such operation and other complex string manipulation operations in R.
 
 ```{r}
 tolower(tree_1)
 toupper(tree_1)
 ```
-With `trimws` you can remove the white spaces around your strings.
+With `trimws()` you can remove the white spaces around your strings. As the name sound `trimws()` -- `trim white spaces`
 ```{r}
 tree_1 <- trimws(tree_1)
 tree_1
@@ -256,25 +262,25 @@ After trimming the white spaces, the number of characters would reduce.
 ```{r}
 nchar(tree_1)
 ```
-To extract certain aspect of your text, use `substring`, or `substr`. `substr` takes the argument `x` which your data, `start` which is the integer for the first element of the text to be extracted or replaced, and `stop` which is the integer for the last element of the text to be extracted or replaced. For example, we can extract `Adansonia` from the text with the following code.
+To extract certain aspect of your text, use `substring()`, or `substr()`. `substr()` takes the argument `x` which your data, `start` which is the integer for the first element of the text to be extracted or replaced, and `stop` which is the integer for the last element of the text to be extracted or replaced. For example, we can extract `Adansonia` from the text with the following code.
 ```{r}
 substr(tree_1, start = 1, stop = 9)
 ```
 
-`substr` is also used to replace strings in data.
+`substr()` is also used to replace strings in data.
 ```{r}
 substr(tree_1, start = 11, nchar(tree_1)) <- "gregorii"
 tree_1
 ```
 
-There are times, we would like to split text data, using `strsplit`, we can split the `tree_1` strings to genus and species with the spaces between them.
+There are times, we would like to split text data, using `strsplit()`, we can split the `tree_1` strings to genus and species with the spaces between them.
 ```{r}
 strsplit(tree_1, split = " ")
 ```
 
 Notice the output, both words now have their inverted comma.
 
-There are still more functions for string manipulation in R, not all will be covered, as this will be a large book volume. However, Concatenation will be covered. To concatenate data using either `paste0` or `paste`. There are almost similar having slight differences. 
+There are still more functions for string manipulation in R, not all will be covered, as this will be a large book volume. However, Concatenation will be covered. To concatenate data using either `paste0()` or `paste()`. There are almost similar having slight differences. 
 ```{r}
 paste(tree_1, " man")
 paste("My best tree species is ", tree_1)
@@ -319,7 +325,7 @@ If we look closely, we can spot an error while computing `z_dt`. The following s
 ```{r}
 new_function <- function() {}
 ```
-The name of the arguments is passed into the parenthesis of `function` and the body, or expresions are passed into the curly brackets.
+The name of the arguments is passed into the parenthesis of `function()` and the body, or expresions are passed into the curly brackets.
 
 ```{r}
 z_score <- function(x) {
@@ -360,15 +366,15 @@ When do you need to write a function?
 
 :::{.callout-important}
 ## Getting Help
-Use the `help` function to get help, `?`, and also `args` to see the arguments of functions. There are more than 2300 functions loaded when an R session starts and that's a lot. Some will be remembered and some forgotten. You are not expected to remember these functions, even the people that developed these functions forget some of the function and their arguments. Remember there always resources for you
+Use the `help()` function to get help, `?`, and also `args()` to see the arguments of functions. There are more than 2300 functions loaded when an R session starts and that's a lot. Some will be remembered and some forgotten. You are not expected to remember these functions, even the people that developed these functions forget some of the function and their arguments. Remember there always resources for you
 :::
 
 ## Exercise {.unnumbered}
-1. Using `seq`, create a sequence of odd numbers between 1 and 100.
-2. Read the documentation of `mean`, `median`, `sd`, and `var`. What does the `is.na` argument does?
-3. What is the difference between `substring` and `substr`?
-4. What is the difference between `paste` and `paste0`.
+1. Using `seq()`, create a sequence of odd numbers between 1 and 100.
+2. Read the documentation of `mean()`, `median()`, `sd()`, and `var()`. What does the `is.na()` argument does?
+3. What is the difference between `substring()` and `substr()`?
+4. What is the difference between `paste()` and `paste0()`.
 
 
 ## Summary
-Functions are little codes that performs specific functions. Armed with them we can fly on eagles wing. Functions such as `mean`, `length`, `plot` and so on, makes it easier to perform tasks. However, this does not imply that there are functions for all tasks we want to accomplish. In such case, we need to develop our own functions called, custom functions. There are also functions in other packages which extends the capabilities of R.
+Functions are little codes that performs specific functions. Armed with them we can fly on eagles wing. Functions such as `mean()`, `length()`, `plot()` and so on, makes it easier to perform tasks. However, this does not imply that there are functions for all tasks we want to accomplish. In such case, we need to develop our own functions called, custom functions. There are also functions in other packages which extends the capabilities of R.
